
* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `set_unordlist` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `sparse_bitset` module

* The following obsolete predicates has been removed:

   - pred `empty/1`

### Changes to the `tree_bitset` module

* The following obsolete predicates has been removed:

   - pred `empty/1`

### Changes to the `string` module

* The following obsolete modes have been removed from the following predicates:

   - pred `to_char_list(uo, in)`
   - pred `to_rev_char_list(in, out)`
   - pred `append(out, out, in)`
   - pred `prefix(in, out)`
   - pred `suffix(in, out)`

### Changes to the `term_io` module

* The following predicates have been removed:

    - pred `read_term/3`
            (replacement: `mercury_term_parser.read_term/3`)
    - pred `read_term/4`
            (replacement: `mercury_term_parser.read_term/4`)
    - pred `read_term_with_op_table/4`
            (replacement: `mercury_term_parser.read_term_with_op_table/4`)
    - pred `read_term_with_op_table/5`
            (replacement: `mercury_term_parser.read_term_with_op_table/5`)

### Changes to the `tree234` module

* The following predicates have been added:

    - pred `sorted_keys_match/2`

### Changes to the `version_hash_table` module

* The following obsolete predicates have been removed:

    - pred `char_hash/2`
    - pred `float_hash/2`
    - pred `generic_hash/2`
    - pred `int_hash/2`
    - pred `string_hash/2`
    - pred `uint_hash/2`

Changes to the Mercury compiler
-------------------------------

* We have fixed a bug where `--warn-unused-imports` did not warn about
  unused modules that are also imported by an ancestor of the current module.

* The deprecated option `--trail-segments` has been deleted and the grade
  component `trseg` is no longer accepted as a synonym for `tr`.
